--- a/Tools/NavViewer/index.html
+++ b/Tools/NavViewer/index.html
@@ -40,6 +40,7 @@
         <label><input id="check-bbox" type="checkbox" /> Render BBox</label><br />
         <label><input id="check-numbers" type="checkbox" /> Render surface numbers</label><br />
         <label><input id="check-kdtree" type="checkbox" /> Render k-d tree</label><br />
+        <label><input id="check-aigrid" type="checkbox" /> Render AIRG</label><br />
         <label><input id="check-use-ordered-edge-colors" type="checkbox" /> Use ordered edge colors</label><br />
         <label><input id="highlight-area" type="text" style='width:5em'/> Highlight area #</label><br />
         <label><input id="kd-tree-depth" type="range" style='width:5em'/> Show KD Tree at depth</label><br />
@@ -48,6 +49,7 @@
     <script src="https://unpkg.com/@seregpie/three.text-texture"></script>
     <script src="https://unpkg.com/@seregpie/three.text-sprite"></script>
     <script src="OrbitControls.js"></script>
+    <script src="AIGrids.js"></script>
     <script src="NavMeshes.js"></script>
     <script src="viewer.js"></script>
 </body>
